--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>Project 1: Movie ranking list: </h3>
       <a href = "public/movie-ranking.html">Movie ranking project</a>
       <br>
-      <img src = "assets/Movie.png" alt = "My project">
+      <img src = "assets/images/Movie.png" alt = "My project">
      
       <hr>
       <h2>Project 2 : Birthday invite project  </h3>
